@@ -13,7 +13,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, see <http://www.gnu.org/licenses/>.
 #
-# Copyright (C) 2013, 2015 Dominik Kriegner <dominik.kriegner@gmail.com>
+# Copyright (C) 2013-2020 Dominik Kriegner <dominik.kriegner@gmail.com>
 
 # module for handling files stored in the CBF data format
 
